--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <title>Leo Shop</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="navbar">
+            <div class="container">
+                <div class="menu-lists">
+                    <div class="menu-list-language">
+                        <label for="select-language">Language:</label>
+
+                        <select id="select-language" class="select">
+                            <option value="english">English</option>
+                            <option value="russian">Russian</option>
+                            <option value="ukraine">Ukraine</option>
+                        </select>
+                    </div>
+                    <div class="menu-list-currency">
+                        <label for="select-currency">Currency:</label>
+
+                        <select id="select-currency">
+                            <option value="usd">USD</option>
+                            <option value="rub">RUB</option>
+                            <option value="uah">UAH</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="menu-navbar">
+                    <a href="#">Account</a>
+                    <a href="#">Wishlist</a>
+                    <a href="#">Checkout</a>
+                    <a href="#">log In</a>
+                    <a href="#">Sign Up</a>
+                </div>
+            </div>
+        </div>
+        <div class="hero">
+
+        </div>
+    </header>
 </body>
+
 </html>
