--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <div class="menu-list-language">
                         <label for="select-language">Language:</label>
 
-                        <select id="select-language" class="select">
+                        <select id="select-language" class="select-language">
                             <option value="english">English</option>
                             <option value="russian">Russian</option>
                             <option value="ukraine">Ukraine</option>
@@ -26,7 +26,7 @@
                     <div class="menu-list-currency">
                         <label for="select-currency">Currency:</label>
 
-                        <select id="select-currency">
+                        <select id="select-currency" class="select-currency">
                             <option value="usd">USD</option>
                             <option value="rub">RUB</option>
                             <option value="uah">UAH</option>
@@ -35,9 +35,13 @@
                 </div>
                 <div class="menu-navbar">
                     <a href="#">Account</a>
+                    <div class="line"></div>
                     <a href="#">Wishlist</a>
+                    <div class="line"></div>
                     <a href="#">Checkout</a>
+                    <div class="line"></div>
                     <a href="#">log In</a>
+                    <div class="line"></div>
                     <a href="#">Sign Up</a>
                 </div>
             </div>
