create sub navbar

--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
                 </div>
             </div>
         </div>
+        <div class="sub-navbar">
+            <div class="container">
+                <div class="logo">
+                    <h1>Leo Shop</h1>
+                </div>
+                <div class="sub-menu">
+                    <a href="#">Home</a>
+                    <a href="#">Women</a>
+                    <a href="#">Men</a>
+                    <a href="#">Other</a>
+                    <a href="#">Purchase</a>
+                </div>
+                <div class="search-field">
+                    <form action="">
+                        <input type="search" placeholder="Search...">
+                        <button type="submit" value=""></button>
+                    </form>
+                </div>
+                <div class="buttons"></div>
+                <div class="counter"></div>
+            </div>
+        </div>
         <div class="hero">
 
         </div>
