--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <div class="sub-navbar">
             <div class="container">
                 <div class="logo">
-                    <h1>Leo Shop</h1>
+                    <a href="#">
+                        <h1>Leo Shop</h1>
+                    </a>
                 </div>
                 <div class="sub-menu">
                     <a href="#">Home</a>
@@ -58,14 +60,25 @@
                     <a href="#">Other</a>
                     <a href="#">Purchase</a>
                 </div>
-                <div class="search-field">
-                    <form action="">
-                        <input type="search" placeholder="Search...">
-                        <button type="submit" value=""></button>
-                    </form>
+
+                <div class="buttons">
+                    <div class="search-field">
+                        <form action="">
+                            <input type="search" placeholder="Search...">
+                            <button type="submit" value=""></button>
+                        </form>
+                    </div>
+                    <div>
+                        <button class="ticket"></button>
+                    </div>
+                    <div>
+                        <button class="buy"></button>
+                    </div>
+                    <div class="counter">
+                        <p>Cart <span>(0)</span></p>
+                    </div>
                 </div>
-                <div class="buttons"></div>
-                <div class="counter"></div>
+
             </div>
         </div>
         <div class="hero">
