--- a/index.html
+++ b/index.html
@@ -1,90 +1,102 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <title>Leo Shop</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Leo Shop</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+	<link rel="manifest" href="/assets/site.webmanifest">
+	<link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#000000">
+	<link rel="shortcut icon" href="/assets/favicon.ico">
+	<meta name="msapplication-TileColor" content="#000000">
+	<meta name="msapplication-config" content="/assets/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-    <header class="header">
-        <div class="navbar">
-            <div class="container">
-                <div class="menu-lists">
-                    <div class="menu-list-language">
-                        <label for="select-language">Language:</label>
-
-                        <select id="select-language" class="select-language">
-                            <option value="english">English</option>
-                            <option value="russian">Russian</option>
-                            <option value="ukraine">Ukraine</option>
-                        </select>
-                    </div>
-                    <div class="menu-list-currency">
-                        <label for="select-currency">Currency:</label>
-
-                        <select id="select-currency" class="select-currency">
-                            <option value="usd">USD</option>
-                            <option value="rub">RUB</option>
-                            <option value="uah">UAH</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="menu-navbar">
-                    <a href="#">Account</a>
-                    <div class="line"></div>
-                    <a href="#">Wishlist</a>
-                    <div class="line"></div>
-                    <a href="#">Checkout</a>
-                    <div class="line"></div>
-                    <a href="#">log In</a>
-                    <div class="line"></div>
-                    <a href="#">Sign Up</a>
-                </div>
-            </div>
-        </div>
-        <div class="sub-navbar">
-            <div class="container">
-                <div class="logo">
-                    <a href="#">
-                        <h1>Leo Shop</h1>
-                    </a>
-                </div>
-                <div class="sub-menu">
-                    <a href="#">Home</a>
-                    <a href="#">Women</a>
-                    <a href="#">Men</a>
-                    <a href="#">Other</a>
-                    <a href="#">Purchase</a>
-                </div>
-
-                <div class="buttons">
-                    <div class="search-field">
-                        <form action="">
-                            <input type="search" placeholder="Search...">
-                            <button type="submit" value=""></button>
-                        </form>
-                    </div>
-                    <div>
-                        <button class="ticket"></button>
-                    </div>
-                    <div>
-                        <button class="buy"></button>
-                    </div>
-                    <div class="counter">
-                        <p>Cart <span>(0)</span></p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <div class="hero">
-
-        </div>
-    </header>
+	<header class="header">
+		<div class="navbar">
+			<div class="container">
+				<div class="menu-lists">
+					<div class="menu-list-language">
+						<label for="select-language">Language:</label>
+						<select id="select-language" class="select-language">
+							<option value="english">English</option>
+							<option value="russian">Russian</option>
+							<option value="ukraine">Ukraine</option>
+						</select>
+					</div>
+					<div class="menu-list-currency">
+						<label for="select-currency">Currency:</label>
+						<select id="select-currency" class="select-currency">
+							<option value="usd">USD</option>
+							<option value="rub">RUB</option>
+							<option value="uah">UAH</option>
+						</select>
+					</div>
+				</div>
+				<div class="menu-navbar">
+					<a href="#">Account</a>
+					<div class="line"></div>
+					<a href="#">Wishlist</a>
+					<div class="line"></div>
+					<a href="#">Checkout</a>
+					<div class="line"></div>
+					<a href="#">log In</a>
+					<div class="line"></div>
+					<a href="#">Sign Up</a>
+				</div>
+			</div>
+		</div>
+		<div class="sub-navbar">
+			<div class="container">
+				<div class="logo">
+					<a href="#">
+						<h1>Leo Shop</h1>
+					</a>
+				</div>
+				<div class="sub-menu">
+					<a href="#">Home</a>
+					<a href="#">Women</a>
+					<a href="#">Men</a>
+					<a href="#">Other</a>
+					<a href="#">Purchase</a>
+				</div>
+				<div class="buttons">
+					<div class="search-field">
+						<form action="">
+							<input type="search" placeholder="Search...">
+							<button type="submit" value=""></button>
+						</form>
+					</div>
+					<div>
+						<button class="ticket"></button>
+					</div>
+					<div>
+						<button class="buy"></button>
+					</div>
+					<div class="counter">
+						<p>Cart <span>(0)</span></p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="slider">
+			<div>
+				<img src="/assets/img/img-for-slider-1.png" alt="img-for-slider">
+			</div>
+			<div>
+				<img src="/assets/img/img-for-slider-2.jpg" alt="img-for-slider">
+			</div>
+			<div>
+				<img src="/assets/img/img-for-slider-3.jpg" alt="img-for-slider">
+			</div>
+		</div>
+	</header>
 </body>
 
 </html>
