--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Иннова</title>
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="/assets/img/favicon/site.webmanifest">
-	<link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#878787">
-	<link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="./assets/img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="./assets/img/favicon/safari-pinned-tab.svg" color="#878787">
+	<link rel="shortcut icon" href="./assets/img/favicon/favicon.ico">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-config" content="/assets/img/favicon/browserconfig.xml">
+	<meta name="msapplication-config" content="./assets/img/favicon/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 	<!-- Favicons ending -->
 </head>
 
 <body>
 	<header id="myHeader">
-		<div class="navbar-wrapper" style='background: url("/assets/img/header-bg.png")'>
+		<div class="navbar-wrapper" style='background: url("./assets/img/header-bg.png")'>
 			<div class="container">
 				<div class="navbar">
 					<div class="navbar-content">
@@ -50,7 +50,7 @@
 
 	<section class="progress"></section>
 
-	<section class="section-subheader" id="subheader" style='background-image:url("/assets/img/background.png")'>
+	<section class="section-subheader" id="subheader" style='background-image:url("./assets/img/background.png")'>
 		<div class="container">
 			<div class="main-title">Консультирование в сфере биржевой торговли и управления активами</div>
 			<div class="main-subtitle">Более 7 лет на рынке!</div>
@@ -58,7 +58,7 @@
 			<div class="child-subtitle">почему мы?</div>
 			<div class="block-for-metal-btn scrollto-js" id="btnScrollToConsult">
 				<a href="#consult" class="btn-metal">
-					<span class="btn-scroll-down" style='background-image: url("/assets/img/icon-btn-bg-metal.png")'>
+					<span class="btn-scroll-down" style='background-image: url("./assets/img/icon-btn-bg-metal.png")'>
 						<span class="btn-sircle">
 							<span class="btn-arrow"></span>
 						</span>
@@ -1304,7 +1304,7 @@
 			<div class="section-our-advantages-header">наши преимущества</div>
 		</div>
 		<div class="block-our-advantages-main"
-			style="background-image:url('/assets/img/background-our-advantages.png')">
+			style="background-image:url('./assets/img/background-our-advantages.png')">
 			<div class="container">
 				<div class="block-with-cards">
 					<div class="first-line-with-items">
@@ -1575,7 +1575,7 @@
 	</section>
 
 	<section class="section-contact-with-us" id="contacts"
-		style='background:url("/assets/img/background-contact-with-us.png") no-repeat; background-size: cover;'>
+		style='background:url("./assets/img/background-contact-with-us.png") no-repeat; background-size: cover;'>
 		<div class="container">
 			<div class="section-contact-with-us-header">СВЯЗАТЬСЯ С НАМИ</div>
 			<div class="section-contact-with-us-content">
@@ -1617,7 +1617,7 @@
 		</div>
 	</section>
 
-	<footer style='background-image:url("/assets/img/background-contact-with-us.png");'>
+	<footer style='background-image:url("./assets/img/background-contact-with-us.png");'>
 		<div class="container">
 			<div class="footer-items">
 				<div class="footer-item logo-size">
@@ -1638,7 +1638,7 @@
 
 	<div id="callMe" class="popup popup-feedback" style="opacity: 0">
 		<div class="popup-wrapper">
-			<div class="popup-content" role="dialog" style='background-image: url("/assets/img/background-popup.png")'>
+			<div class="popup-content" role="dialog" style='background-image: url("./assets/img/background-popup.png")'>
 				<div class="popup-content-inner">
 					<button type="submit" class="popup-close" data-popup-close="feedBack"><img
 							src="assets/img/icon-close.png" alt=""></button>
@@ -1669,7 +1669,7 @@
 
 	<div id="feedBack" class="popup popup-feedback" style="opacity: 0">
 		<div class="popup-wrapper">
-			<div class="popup-content" role="dialog" style='background-image: url("/assets/img/background-popup.png")'>
+			<div class="popup-content" role="dialog" style='background-image: url("./assets/img/background-popup.png")'>
 				<div class="popup-content-inner">
 					<button type="submit" class="popup-close" data-popup-close="feedBack"><img
 							src="assets/img/icon-close.png" alt=""></button>
